--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
     <section class="navigation">
       <h1>SpaceWalkers</h1>
       <nav>
-        <a>Home</a>
-        <a>About Us</a>
-        <a>Blog</a>
-        <a>Contact</a>
-        <a>Sign In</a>
+        <a href="#">Home</a>
+        <a href="#">About Us</a>
+        <a href="#">Blog</a>
+        <a href="#">Contact</a>
+        <a href="#">Sign In</a>
       </nav>
     </section>
     <!-- navigation code here -->
