--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
           </p>
 
           <div class="btn">
-            Sign Up
+            <button>Sign Up</button>
           </div>
         </div>
 
